@@ -42,7 +42,7 @@
             <a href = "main.html" class = "sourceCodeDark centerObj">
                 Return to Main
             </a>
-            <object data="other/changeLog.txt" type="text/plain" height="1000px" width="1000px">
+            <object data="other/changeLog.txt" type="text/plain" height="1000000px" width="1000px">
             </object>
         </article>
     </body>
