@@ -15,8 +15,8 @@
                 Click a button below to be taken to that project/file showcase.
             </p>
             <div class = "flexArticleInverse">
-                <a href = "JFocus/JFocus2.html" class = "sourceCodeEmoji centerObj">
-                    Javascript Focus 2 🛠️
+                <a href = "JFocus/JFocus3.html" class = "sourceCodeEmoji centerObj">
+                    Javascript Focus 3 🛠️
                     <p class = "postletter">(This button's href changes)</p>
                 </a>
                 <a href = "changeLog.html" class = "sourceCodeEmoji centerObj">
